--- a/novedades.css
+++ b/novedades.css
@@ -6,8 +6,8 @@
 
 body{
     background-color: white;
-    height: auto;
 }
+
 
 .header{
     height: 90px;
@@ -36,10 +36,9 @@ h1{
     height: auto;
     width: 500px;
     margin-top: -60px;
-    margin-left: 25px;
+    margin-left: 65px;
     border: none;
 }
-
 .login{
     display: flex;
     justify-content: flex-end;
@@ -59,6 +58,7 @@ h1{
     border: 2px solid black;
     background-color: aquamarine;
 }
+
 
 .nav-btn{
     display: flex; /* Usar flexbox para los botones */
@@ -132,25 +132,22 @@ h1{
     background-color: aquamarine;
 }
 
-.article-container {
-    position: relative; /* Permite posicionar elementos dentro del artículo */
-    width: 100%; /* Ancho del contenedor */
-    overflow: hidden; /* Oculta cualquier contenido que se salga del contenedor */
-}
 
-.article-container img {
-    width: 100%; /* Asegura que la imagen ocupe todo el contenedor */
-    height: auto; /* Mantiene la relación de aspecto de la imagen */
+.container-art{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
 }
-
-.p-bienvenido {
-    font-size: 30px;
-    position: absolute; /* Posiciona el texto de manera absoluta */
-    top: 20px; /* Ajusta la distancia desde la parte superior */
-    left: 20px; /* Ajusta la distancia desde la izquierda */
-    right: 20px;
-    color: white; /* Color del texto */
-    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente para el texto */
-    padding: 10px; /* Espaciado interno */
-    border-radius: 5px; /* Bordes redondeados */
-}
+/* Si quieres que las dos primeras publicaciones estén en la primera fila */
+.container-art > article:nth-child(1) {
+    grid-column: 1;
+  }
+  
+  .container-art > article:nth-child(2) {
+    grid-column: 2;
+  }
+  
+  /* Las publicaciones a partir de la tercera se ajustan en las filas siguientes */
+  .container-art > article:nth-child(n+3) {
+    grid-column: span 1;
+  }
